--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <script src="js/leap.js"></script>
 	</head>
     <body>
-    <div id="player"></div>
+    	<div id="player"></div>
+    </body>
 </html>
