--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <head>
         <title>Youtube Motion</title>
     </head>
+    <script type="text/javascript">
+    var pathString = window.location.pathname;
+    document.getElementById('pathString').innerHTML = pathString;
+    </script>
     <body>
-        <h1>swag</h1>
+        <div id ="pathString"> content</div>
     </body>
 </html>
