--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <title>YouTube IFrame Demo</title>
+        <title>YouTube Motion</title>
+        <link rel="stylesheet" href="css/style.css">
         <script src="js/leap-0.6.3.js"></script>
         <script src="js/leap.js"></script>
 	</head>
     <body>
-    	<div id="player"></div>
-        <input type="text">
+        <h1>YouTube Motion</h1>
+        <div id="search">
+            <input type="text"/>
+            <input type="submit"/>
+        </div>
     </body>
 </html>
