--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <body>
         <h1>YouTube Motion</h1>
         <div id="search">
-            <input type="text"/>
-            <input type="submit"/>
+            <input type="text" id="inputtext"/>
+            <input type="submit" onclick="getOption()" />
         </div>
+        <div id="player"></div>
     </body>
 </html>
