Finished most styling.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
         <title>YouTube Motion</title>
         <link rel="stylesheet" href="css/style.css">
+        <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
         <script src="js/leap-0.6.3.js"></script>
         <script src="js/leap.js"></script>
 	</head>
     <body>
-        <h1>YouTube Motion</h1>
+        <h1><span id="youtube-header">YouTube</span> <span id="motion-header">Motion</span></h1>
         <div id="search">
             <input type="text"/>
             <input type="submit"/>
