--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
         <script src="js/leap-0.6.3.js"></script>
         <script src="js/leap.js"></script>
+        <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
+        <link rel="shortcut icon" href="assets/avicon.ico" type="image/x-icon"/>
 	</head>
     <body>
         <center>
