Styling of Instructions

--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
             </div>
             <div id="player"></div>
         </center>
+        <div id="instructions">
+            <h2>Instructions</h2>
+            <ol>
+                <li>Tap your finger to pause/play the video.</li>
+                <li>Swipe left and right to skip around in the video.</li>
+                <li>Swipe up and down to control the volume.</li>
+            </ol>
+        </div>
     </body>
 </html>
